Balance API (#7)
* Clippy changes (nursery, unwrap_used)

* Added transactions!

* Move routes to attributes, add imports

* Added BonziBuddy to bacon config

* Add logging

* Tests for creating transactions

---------

Authored-by: A-iko <aikovw@gmail.com>
